--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -1,12 +1,12 @@
-name : Deploy Storybook
+name: Deploy Storybook
 
-on: 
-  push: 
-    branches: 
-      -'ig/main'
+on:
+  push:
+    branches:
+      - main
 
-jobs: 
-  build-and-deply:  
+jobs:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
@@ -15,17 +15,16 @@ jobs:
 
       - name: Setup Node.js
         uses: actions/setup-node@v3
-        with: 
+        with:
           node-version: 16
-        
 
       - name: Install dependencies
-        run: npm ci
+        run: npm ci --legacy-peer-deps
 
       - name: Build Storybook
         run: npm run build-storybook
 
       - name: Deploy Storybook
         run: npm run deploy-storybook -- --ci --existing-output-dir=storybook-static
-        env: 
+        env:
           GH_TOKEN: ${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}
